# cpp-project-skeleton

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  build.sh  conanfile.txt  docker-compose.yml  main.cpp  uninstall.sh
consumer/: CMakeLists.txt  main.cpp
libskeleton/: CMakeLists.txt  README.md  conanfile.txt
libskeleton/cmake/: .gitignore  FindPoco.cmake  SkeletonConfig.cmake.in  print_target_properties.cmake
libskeleton/conan/: conanfile.txt
libskeleton/conan/profiles/: clang
libskeleton/include/: skeleton.hpp
libskeleton/include/skeleton/: skeleton.hpp
libskeleton/src/: skeleton.cpp
libskeleton/test/: skeleton_tester.cpp
sanitizers/: address.cpp  memory.cpp
scripts/: .gitignore  format.sh  install_git_hooks.sh  install_opencv.sh  install_openvino.sh  pre-commit  travis_test.sh
src/: main.cpp  md5.cpp
test/: poco_tester.cpp
